--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "files.exclude":
     {
         "**/.DS_Store":true,
@@ -51,5 +51,8 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
-    }
+    },
+    "omnisharp.useModernNet": true,
+    "omnisharp.dotnetPath": "C:\\Program Files\\dotnet",
+    "omnisharp.sdkPath": "C:\\Program Files\\dotnet\\sdk\\6.0.405"
 }
